--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;500;600&family=Nunito:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Quicksand:wght@400;500;600;700&display=swap');
+body{
+    font-family: "Nunito", "sans-serif";
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.tab {
+    border-radius: 8px;
+    padding: 12px 24px;
+    margin-right: 8px;
+    font-size: 16px;
+    transition: all 0.3s;
+    font-weight: 600;
+}
+
+.tab.active,
+.tab:hover {
+    background-color: #4546e5;
+    color: #fff;
+}
+.active-data{
+    color: #fff;
+    background: #4546e5;
 }
